# scratchway

./: Cargo.toml  README.md  rustfmt.toml
examples/: actuallyscratch.rs  globals.rs  grimshit.rs  layersurface.rs  simplewindow.rs
examples/clibs/: cairo.rs  mod.rs  xkbcommon.rs
examples/globals/: Cargo.toml
examples/globals/src/: main.rs
scr_protocols/: Cargo.toml
scr_protocols/src/: cursor_shape_v1.rs  lib.rs  single_pixel_buffer_v1.rs  tablet_v2.rs  viewporter.rs  wlr_layer_shell_unstable_v1.rs  wlr_screencopy_unstable_v1.rs  xdg_decoration_unstable_v1.rs  xdg_shell.rs
scr_scanner/: Cargo.toml
scr_scanner/src/: lib.rs  parser.rs
src/: connection.rs  core.rs  events.rs  lib.rs  main.rs  protocols.rs  utils.rs  wayland.rs
src/protocols/: core.rs  mod.rs  viewporter.rs  wayland.rs  wlr_layer_shell_unstable_v1.rs  wp_single_pixel_buffer_manager_v1.rs  xdg_decoration_unstable_v1.rs  xdg_shell.rs
